2005-04-02  Tom Tromey  <tromey@redhat.com>

	* model/class.cc (get_output_name): New method.
	* model/class.hh (model_class::get_output_name): Declare.
	* aot/mangle.cc (update): Use get_output_name.  Mangle non-ascii
	characters.
	* header/cni.cc (write_namespaces): Use get_output_name.
	(write_method): Likewise.

2005-04-02  Tom Tromey  <tromey@redhat.com>

	* bytecode/verify.cc (branch_prepass): Cast argument to sprintf.
	(verify_instructions_0): Likewise.
	(VFY_FAST_OPCODES): Changed sense of #ifdef.

2005-03-30  Tom Tromey  <tromey@redhat.com>

	* defassign.cc (definite_assignment_visitor::visit_bytecode_block):
	Just abort.
	(definite_assignment_visitor::visit_method): Do nothing for
	bytecode.

2005-03-30  Tom Tromey  <tromey@redhat.com>

	* header/cni.cc (write_field): Emit field value.
	(generate): Change initialization of current_flags.
	(write_method): Correctly handle constructors of
	member classes.
	(write_namespaces): Correctly handle member class names.

2005-03-30  Tom Tromey  <tromey@redhat.com>

	* header/cni.hh (cni_code_generator::write_field): Updated.
	(cni_code_generator::keyword_p): Declare.
	* header/cni.cc (keywords): New global.
	(NUM_KEYWORDS): New define.
	(keyword_p): New method.
	(generate): Compute method names.
	(write_field): Added 'method_names' arguments.  Handle C++ keyword
	clash.
	(write_method): Handle C++ keyword clash.  Skip synthetic
	methods.
	* header/cni.cc (write_method): Mark more methods as virtual.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.hh (bytecode_generator::get_byte_count): New
	method.
	* bytecode/locals.cc (update): Changed assertion.
	(emit): Handle case where 'end' is NULL.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* main.cc (argument_parser::help_options): Document
	-nostdheaders.
	(argument_parser::parse_args): Handle -nostdheaders.
	* header/cni.cc (cni_code_generator): Initialize new field.
	(generate): Handle new field.