@@ -1,5 +1,10 @@
 2005-04-02  Tom Tromey  <tromey@redhat.com>
 
+	* model/class.cc (resolve): Put name of field in error.  Correctly
+	compute found_clinit for a .class file.
+
+2005-04-02  Tom Tromey  <tromey@redhat.com>
+
 	* model/class.cc (get_output_name): New method.
 	* model/class.hh (model_class::get_output_name): Declare.
 	* aot/mangle.cc (update): Use get_output_name.  Mangle non-ascii
